# DjangoQuestionsTest

./: .gitignore  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/polls/: index.html
