[tool.poetry]
name = "django-rest"
version = "0.1.0"
description = ""
authors = ["Ivan Kovtun <ivan.kovtun@capgemini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
markdown = "^3.6"
django-debug-toolbar = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
